--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
-    "eslint": "^7.17.0"
+    "eslint": "^7.17.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
+  },
+  "dependencies": {
+    "mysql": "^2.18.1",
+    "typescript": "^4.1.3"
   }
 }
